# libmicrohttpd

./: .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  bootstrap  configure.ac  doxy-config  funding.json  libmicrohttpd.pc.in
doc/: .gitignore  Doxyfile  Makefile.am  basicauthentication.inc  ecos.texi  exploringrequests.inc  hellobrowser.inc  introduction.inc  libmicrohttpd-tutorial.texi  libmicrohttpd.3  libmicrohttpd.texi  m1.txt  microhttpd-tutorial.texi  microhttpd.texi  processingpost.inc  responseheaders.inc  run-gendocs.sh  tutorial.texi
doc/chapters/: basicauthentication.inc  bibliography.inc  exploringrequests.inc  hellobrowser.inc  largerpost.inc  processingpost.inc  responseheaders.inc  tlsauthentication.inc  websocket.inc
doc/doxygen/: Makefile.am  libmicrohttpd.doxy  libmicrohttpd.doxy.in
doc/examples/: .gitignore  Makefile.am  basicauthentication.c  demo.c  hellobrowser.c  largepost.c  logging.c  responseheaders.c  sessions.c  simplepost.c  tlsauthentication.c  websocket.c
src/: .gitignore  Makefile.am  client.c  client.h  clientinfo.c  clientinfo.h  config.h  gethandler.c  gethandler.h  memory.c  memory.h  outstream.c  outstream.h  server.c  server.h  socket.h  utils.c  utils.h  web_server.h
src/daemon/: EXPORT.sym  Makefile.am  SYMBOLS  base64.c  base64.h  connection.c  connection.h  connection_https.c  daemon.c  daemon_test.c  daemontest.c  daemontest1.c  daemontest_get.c  daemontest_large_put.c  daemontest_long_header.c  daemontest_post.c  daemontest_post_loop.c  daemontest_postform.c  daemontest_put.c  daemontest_put_chunked.c  digestauth.c  fileserver_example.c  internal.c  internal.h  md5.c  md5.h  memorypool.c  memorypool.h  minimal_example.c  plibc.h  postprocessor.c  postprocessor_large_test.c  postprocessor_test.c  reason_phrase.c  reason_phrase.h  response.c  response.h  session.c  session.h  sha1.c  (+3 more)
src/examples/: .gitignore  Makefile.am  authorization_example.c  benchmark.c  benchmark_https.c  chunked_example.c  connection_close.c  demo.c  demo_https.c  digest_auth_example.c  digest_auth_example_adv.c  dual_stack_example.c  fileserver_example.c  fileserver_example_dirs.c  fileserver_example_external_select.c  http_chunked_compression.c  http_compression.c  https_echo_client_example.c  https_fileserver_example.c  https_server_example.c  mhd2spdy.c  mhd2spdy_http.c  mhd2spdy_http.h  mhd2spdy_spdy.c  mhd2spdy_spdy.h  mhd2spdy_structures.c  mhd2spdy_structures.h  minimal_example.c  minimal_example2.c  minimal_example_comet.c  minimal_example_empty.c  minimal_example_empty_tls.c  msgs_i18n.c  post_example.c  pthread_windows.c  pthread_windows.h  querystring_example.c  refuse_post_example.c  spdy_event_loop.c  spdy_fileserver.c  (+7 more)
src/examples2/: Makefile.am  demo.c  minimal_auth_basic.c  minimal_auth_digest.c
src/gnutls/: check_record_pending.c  handshake.c  idle_ready.c  init.c  init.h  recv.c  send.c  setup_connection.c  shutdown_connection.c  strerror.c  teardown_connection.c  update_event_loop_info.c
src/incl_priv/: .gitignore  Makefile.am  mhd_sys_options.h
src/include/: .gitignore  Makefile.am  autoinit_funcs.h  d_options.rec  d_options.tmpl  daemon-options-generator.c  mhd_future.h  mhd_options.h  mhd_sys_options.h  microhttpd.h  microhttpd2.h  microhttpd2_generated_daemon_options.h  microhttpd2_generated_response_options.h  microhttpd2_main.h.in  microhttpd2_portability.h  microhttpd2_postamble.h.in  microhttpd2_preamble.h.in  microhttpd_tls.h  microhttpd_ws.h  microhttpsd.h  microspdy.h  options-generator.c  platform.h  platform_interface.h  plibc.h  r_options.rec  this_API_is_TERRIBLE.txt  w32functions.h
src/lib/: Makefile.am  action_continue.c  action_from_response.c  action_parse_post.c  action_process_upload.c  action_suspend.c  base64.c  base64.h  connection_add.c  connection_call_handlers.c  connection_call_handlers.h  connection_cleanup.c  connection_close.c  connection_close.h  connection_finish_forward.c  connection_info.c  connection_options.c  connection_update_event_loop_info.c  connection_update_event_loop_info.h  connection_update_last_activity.c  daemon.c  daemon_add_connection.c  daemon_close_all_connections.c  daemon_create.c  daemon_destroy.c  daemon_epoll.c  daemon_get_fdset.c  daemon_get_timeout.c  daemon_info.c  daemon_ip_limit.c  daemon_options.c  daemon_poll.c  daemon_poll.h  daemon_quiesce.c  daemon_run.c  daemon_run_from_select.c  daemon_select.c  daemon_select.h  daemon_start.c  init.c  (+16 more)
src/mhd2/: .gitignore  Makefile.am  action.c  auth_basic.c  auth_basic.h  auth_digest.c  auth_digest.h  autoinit_funcs.h  compat_calloc.c  compat_calloc.h  conn_data_process.c  conn_data_process.h  conn_data_recv.c  conn_data_recv.h  conn_data_send.c  conn_data_send.h  conn_get_info.c  conn_mark_ready.h  conn_tls_check.c  conn_tls_check.h  daemon_add_conn.c  daemon_add_conn.h  daemon_create.c  daemon_event_update.c  daemon_funcs.c  daemon_funcs.h  daemon_get_info.c  daemon_logger.c  daemon_logger.h  daemon_logger_default.c  daemon_logger_default.h  daemon_options.h  daemon_set_options.c  daemon_start.c  data_process.c  data_process.h  dcc_action.c  events_process.c  events_process.h  extr_events_funcs.c  (+168 more)
src/microhttpd/: .gitignore  EXPORT.sym  MHD_byteorder.h  MHD_limits.h  Makefile.am  base64.c  base64.h  basicauth.c  basicauth.h  connection.c  connection.h  connection_https.c  connection_https.h  daemon.c  digestauth.c  digestauth.h  gen_auth.c  gen_auth.h  internal.c  internal.h  md5.c  md5.h  md5_ext.c  md5_ext.h  memorypool.c  memorypool.h  mhd_align.h  mhd_assert.h  mhd_bithelpers.h  mhd_byteorder.h  mhd_compat.c  mhd_compat.h  mhd_itc.c  mhd_itc.h  mhd_itc_types.h  mhd_limits.h  mhd_locks.h  mhd_mono_clock.c  mhd_mono_clock.h  mhd_panic.c  (+58 more)
src/microhttpd_ws/: Makefile.am  mhd_websocket.c  sha1.c  sha1.h  test_websocket.c  test_websocket_browser.c
src/microspdy/: EXPORT.sym  Makefile.am  alstructures.c  alstructures.h  applicationlayer.c  applicationlayer.h  compression.c  compression.h  daemon.c  daemon.h  internal.c  (+15 more)
(+588 files in other folders)
