man_MANS = libmicrohttpd.3
EXTRA_DIST = $(man_MANS) Doxyfile

DISTCLEANFILES = microhttpd.cps tutorial.cps tutorial.dvi
info_TEXINFOS = microhttpd.texi tutorial.texi
microhttpd_TEXINFOS = lgpl.texi chapters/basicauthentication.inc chapters/bibliography.inc chapters/exploringrequests.inc fdl-1.2.texi chapters/hellobrowser.inc chapters/introduction.inc chapters/processingpost.inc chapters/responseheaders.inc chapters/largerpost.inc \
examples/basicauthentication.c \
examples/hellobrowser.c \
examples/largepost.c \
examples/logging.c \ 
examples/responseheaders.c \
examples/simplepost.c
